Closed Bug 156714 Opened 22 years ago Closed 22 years ago

XBL should report XML parse errors

Categories

(Core :: XBL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.1beta

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Whiteboard: [patch])

Attachments

(1 file)

XBL should report XML parse errors.  It also should ensure that it doesn't use
any of the XML file if there was a parser error, but that's a bit harder. 
However, the reporting is easy, at least if we don't care too much about how the
error message looks.  (The problem there is explained in the XXX comment in the
patch I'm going to attach.)

This patch reports the errors to the error console, and it debug builds also
reports them to stderr.
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [patch]
Target Milestone: --- → mozilla1.1beta
Comment on attachment 90803 [details] [diff] [review]
patch

r=caillon.  Good stuff.
Attachment #90803 - Flags: review+
*** Bug 158538 has been marked as a duplicate of this bug. ***
Fix checked in 2002-08-06 05:55 PDT.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: