Make XBL report XML parse errors.  b=156714  r=caillon  sr=ben